# coursework_2

./: .coveragerc  .gitignore  coverage.json  main.py  pyproject.toml
data/: aeroplanes.json  nominatim.openstreetmap.response.json
src/: abc_api.py  abc_storage.py  aeroplane.py  api.py  json_storage.py  main.py
src/data/: aeroplanes.json
tests/: test_aeroplane.py  test_api.py  test_json_storage.py
